<package format="3">
  <name>PFR_Arm2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for PFR_Arm2</p>
    <p>This package contains configuration data, 3D models and launch files
for PFR_Arm2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
