<?xml version="1.0"?>
<package format="3">
  <name>my_dxl_velocity_cpp</name>
  <version>0.0.1</version>
  <description>Single Dynamixel velocity control with ros2_control</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>PFR_Arm2</exec_depend>

  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros2controlcli</depend>
  <depend>dynamixel_hardware_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
