cmake_minimum_required(VERSION 3.8)
project(pfr_rviz_visualization)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(rclcpp REQUIRED)

add_executable(ee_path_visualizer src/ee_path_visualizer.cpp)
ament_target_dependencies(ee_path_visualizer
  geometry_msgs
  nav_msgs
  rclcpp)
target_compile_features(ee_path_visualizer PUBLIC cxx_std_17)

install(TARGETS ee_path_visualizer
  DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY config
  DESTINATION share/${PROJECT_NAME})

ament_package()
